<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_text_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_editText_hint_telefone_contato">Telefone para contato</string>
    <string name="txt_editText_hint_Nome_curso_desejado">Nome do Curso desejado</string>
    <string name="txt_editText_hint_Segundo_nome">Segundo Nome</string>
    <string name="txt_editText_hint_Primeiro_nome">Primeiro Nome</string>
    <string name="txt_button_finalizar">Finalizar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_limpar">Limpar</string>
</resources>