<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:width="380dp"
                android:text="@string/txt_text_titulo"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPrimeiroNome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:height="48dp"
                android:ems="10"
                android:hint="@string/txt_editText_hint_Primeiro_nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextSobrenome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:height="48dp"
                android:ems="10"
                android:hint="@string/txt_editText_hint_Segundo_nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextNomeCurso"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:height="48dp"
                android:ems="10"
                android:hint="@string/txt_editText_hint_Nome_curso_desejado"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextTelefone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:height="48dp"
                android:ems="10"
                android:hint="@string/txt_editText_hint_telefone_contato"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="380dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="#CA1515"
                android:text="Selecione um curso..."
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/txtListaSpinner"
                android:layout_width="380dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_button_salvar" />

                <Button
                    android:id="@+id/buttonLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_button_limpar" />

            </LinearLayout>


            <Button
                android:id="@+id/buttonFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_button_finalizar" />


        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>